# python-nyt-games

./: .editorconfig  .pre-commit-config.yaml  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  renovate.json
.github/workflows/: labels.yaml  linting.yaml  release-drafter.yaml  release.yaml  tests.yaml  typing.yaml
src/nyt_games/: __init__.py  exceptions.py  models.py  nyt_games.py
tests/: __init__.py  conftest.py  const.py  ruff.toml  syrupy.py  test_nyt_games.py
tests/__snapshots__/: test_nyt_games.ambr
tests/fixtures/: connections.json  crossword_stats_existing_player.json  crossword_stats_new_player.json  latest.json  new_account_connections.json  newer_account_connections.json  no_spelling_bee.json
