[project]
name = "nyt_games"
version = "0.1.0"
description = "Asynchronous Python client for NYT games."
authors = [{ name = "Joost Lekkerkerker", email = "joostlek@outlook.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Joost Lekkerkerker", email = "joostlek@outlook.com" }]
keywords = [
    "NYT games",
    "api",
    "async",
    "client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.0.0",
    "yarl>=1.6.0",
    "mashumaro>=3.11,<4",
    "orjson>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/joostlek/python-nyt-games"
Repository = "https://github.com/joostlek/python-nyt-games"
Documentation = "https://github.com/joostlek/python-nyt-games"
"Bug Tracker" = "https://github.com/joostlek/python-nyt-games/issues"
Changelog = "https://github.com/joostlek/python-nyt-games/releases"

[dependency-groups]
dev = [
    "aiohttp<3.14",
    "codespell==2.4.2",
    "covdefaults==2.3.0",
    "coverage[toml]==7.14.3",
    "mypy==2.1.0",
    "prek==0.4.5",
    "pre-commit-hooks==6.0.0",
    "pylint==4.0.6",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.19",
    "safety==3.8.1",
    "yamllint==1.38.0",
    "syrupy==5.3.2",
    "aioresponses==0.7.9",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/nyt_games"]

[tool.hatch.build.targets.wheel]
include = ["src/nyt_games"]

[tool.hatch.build.targets.wheel.sources]
"src/nyt_games" = "nyt_games"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["nyt_games"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.13"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
  "too-many-instance-attributes",
  "wrong-import-order",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "COM812", # Conflicts with other rules
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "ISC001", # Conflicts with other rules
  "PLR2004", # Just annoying, not really useful
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["nyt_games"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 25
